--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,22 @@
 ---
-title: "Welcome!"
+title: "Rohan Alexander"
+about:
+  template: trestles
+  image-width: 15em
+  image-shape: round
+  image: images/new_headshot.png
+  links:
+    - text: "CV"
+      href: pdfs/cv-academic-Rohan_Alexander.pdf
+    - icon: github
+      text: "GitHub"
+      href: https://github.com/RohanAlexander
+    - icon: twitter
+      text: "Twitter"
+      href: https://twitter.com/RohanAlexander
+    - icon: envelope
+      text: "Email"
+      href: rohan.alexander@utoronto.ca
 ---
 
 I am an assistant professor at the University of Toronto, jointly appointed in the [Faculty of Information](https://ischool.utoronto.ca/profile/rohan-alexander/) and the [Department of Statistical Sciences](https://www.statistics.utoronto.ca/people/directories/all-faculty/rohan-alexander). I am also the assistant director of [CANSSI Ontario](https://canssiontario.utoronto.ca), a senior fellow at [Massey College](https://www.masseycollege.ca), a faculty affiliate at the [Schwartz Reisman Institute for Technology and Society](https://sr-institute.utoronto.ca/), and a co-lead of the [DSI](https://datasciences.utoronto.ca) Thematic Program in Reproducibility.
