Whoops forgot the modeling course

--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,7 @@ I am an assistant professor at the University of Toronto, jointly appointed in t
 
 <img style="float:right; max-width: 50%; position: relative; padding: 10px; top: 0px;" src="images/tellingstorieswithdatapainting.png">
 
-The central thesis of my book rethinking foundational approaches to data science, *[Telling Stories With Data](https://www.tellingstorieswithdata.com/)*, is that a revolution is needed in data science, and I propose a view of what it could look like. It has been strongly endorsed, including: Andrew Gelman *"I absolutely love this book"*, Kosuke Imai *"I highly recommend this unique book!"*, Sir David Spiegelhalter *"[A]n extraordinary, wonderful, book..."*, Daniela Witten *"An excellent book"*, and Richard McElreath *"This is not another statistics book. It is much better than that."* You can buy a print copy [here](https://www.routledge.com/Telling-Stories-with-Data-With-Applications-in-R/Alexander/p/book/9781032134772) and you can access the free online version *[here](https://www.tellingstorieswithdata.com/)*.
+My book, *[Telling Stories With Data](https://www.tellingstorieswithdata.com/)*, argues that a revolution is needed in data science, and I propose a view of what it could look like. It has been strongly endorsed, including: Andrew Gelman *"I absolutely love this book"*, Kosuke Imai *"I highly recommend this unique book!"*, Sir David Spiegelhalter *"[A]n extraordinary, wonderful, book..."*, Daniela Witten *"An excellent book"*, and Richard McElreath *"This is not another statistics book. It is much better than that."* You can buy a print copy [here](https://www.routledge.com/Telling-Stories-with-Data-With-Applications-in-R/Alexander/p/book/9781032134772) and you can access the free online version [here](https://www.tellingstorieswithdata.com/).
 
 My research investigates how we can develop workflows that improve the trustworthiness of data science. I am particularly interested in the role of testing in data science.
 
