--- a/teaching-modeling.qmd
+++ b/teaching-modeling.qmd
@@ -6,7 +6,22 @@ title: "Introduction to Modeling"
 
 ### Overview
 
-After developing comfort with the idea of how our world becomes data and everything that goes into creating a nice, tidy, analysis dataset, we may be interested to model it. This course builds on "Data science foundations" by developing the modeling side of things. Many of the results that we will obtain from our models are determined well before we ever contemplate regression, and the credibility of any conclusions relies on a robust workflow. This course takes those skills as given, and focuses on doing a good job of the modeling. The typical person completing this course is a PhD student who is looking to apply statistics to some other discipline.
+After developing comfort with the idea of how our world becomes data and everything that goes into creating a nice, tidy, analysis dataset, we may be interested to model it. This course builds on "Data science foundations" by developing the modeling side of things. Many of the results that we will obtain from our models are determined well before we ever contemplate regression, and the credibility of any conclusions relies on a robust workflow. 
+
+This course takes those skills as given, and focuses on doing a good job of the modeling. The typical person completing this course is a PhD student who is looking to apply statistics to some other discipline. 
+
+
+### Learning objectives
+
+By the end of the course you should have three quantitative papers that can be submitted to a journal/conference. More generally you should be able to:
+
+1.  Engage critically with ideas and readings related to statistical modeling (demonstrated in all papers and the notebook).
+2.  Conduct quantitativee research in a high-quality, reproducible and ethical way (demonstrated in all papers).
+3.  Clearly communicate what was done, what was found, and why in writing (demonstrated in all papers).
+4.  Respectfully identify strengths and weaknesses in the data science research conducted by others (demonstrated in quizzes, and the peer review).
+5.  Develop the ability to appropriately choose and apply statistical models to real-world situations (demonstrated in the final paper)
+6.  Conduct all aspects of the typical data science workflow (demonstrated in all papers).
+
 
 ### Pre-requisites
 
@@ -79,6 +94,7 @@ Each week you should read the chapters, watch the relevant lecture, and attempt 
 - Watch *Statistical Rethinking* 2023 videos, Lecture 10, "Counts and Hudden Confounds"
 - Read *Bayes Rules!* Chapter 12, "Poisson & Negative Binomial Regression"
 - Read *Bayes Rules!* Chapter 13, "Logistic Regression"
+- Read Burch, Tyler James, 2023, "2023 NHL Playoff Predictions", April. https://tylerjamesburch.com/blog/misc/nhl-predictions as well as the journal article that the model is based on.
 
 ### Week 8
 
@@ -130,6 +146,7 @@ Each week you should read the chapters, watch the relevant lecture, and attempt 
   - Marking starts, noon, on the following Monday, and you can update until then to incorporate peer review comments. Please do not make any changes after marking starts.
 - Task: [Donaldson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-one)
 - Weight: 10 per cent.
+- You must do this individually.
 - You do not need to do this again if you already did it as part of "Data science foundations". In that case, the weight will be redistributed to Papers II and III.
 
 ### Paper II
@@ -137,19 +154,25 @@ Each week you should read the chapters, watch the relevant lecture, and attempt 
 - Due date: Thursday, noon, Week 4.
   - Marking starts, noon, on the following Monday, and you can update until then to incorporate peer review comments. Please do not make any changes after marking starts.
 - Task: [Murrumbidgee Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-murrumbidgee)
+- You are welcome to work in teams up to size three.
 - Weight: 20 per cent.
+- The mark is conditional on the paper being submitted to a journal/conference within two weeks of marking (being rejected is fine---it just has to have been submitted).
 
 ### Paper III
 
 - Due date: Thursday, noon, Week 8.
   - Marking starts, noon, on the following Monday, and you can update until then to incorporate peer review comments. Please do not make any changes after marking starts.
 - Task: [Spadina Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-spadina) or [Spofforth Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-five)
+- You are welcome to work in teams up to size three.
 - Weight: 20 per cent.
+- The mark is conditional on the paper being submitted to a journal/conference within two weeks of marking (being rejected is fine---it just has to have been submitted).
 
 ### Final Paper
 
 - Due date: Thursday, noon, Week 12.
   - Marking starts, noon, two weeks after this date,  and you can update update until then to allow you to incorporate peer review comments. Please do not make any changes after marking starts.
 - Task: [Final Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper)
+- You must do this individually.
 - Weight: 30 per cent.
+- The mark is conditional on the paper being submitted to a journal/conference within two weeks of marking (being rejected is fine---it just has to have been submitted).
 
