--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -54,7 +54,7 @@ The TDW is a joint initiative between the Faculty of Information and the Departm
 - Friday 10 November 2023, all day
 	- **Conference on Statistical Software**
 - Friday 17 November 2023, noon - 1pm
-	- TBD
+	- **Kevin Wilson**
 - Friday 24 November 2023, noon - 1pm
 	- TBD
 
