--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -31,7 +31,9 @@ The TDW is a joint initiative between the Faculty of Information and the Departm
 	- *STUMPY: A powerful tool for modern time series analysis*
 	- Nima Sarajpoor is a data scientist in Manulife, working in Fraud Detection. He has been contributing to the software STUMPY for about two years
 - Friday 6 October 2023, noon - 1pm
-	- **Lindsay Katz**, and **Zane Schwartz**, The Investigative Journalism Foundation
+	- **Fabrizio Dell'Acqua**, Harvard Business School
+	- Experimental evidence from a study of Boston Consulting Group consultants on the effect of access to GPT-4 on performance. Paper [here](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4573321).
+	- Fabrizio Dell'Acqua is a postdoctoral research fellow and teaching fellow at Harvard Business School and the Laboratory for Innovation Science at Harvard (LISH). He received a Ph.D. in Management from Columbia Business School. His research focuses on the areas of automation, human/AI collaboration, and business ethics. 
 - Friday 13 October 2023, noon - 1pm
 	- **Tom Cardoso**, The Globe and Mail
 	- *Secret Canada*
