--- a/index.qmd
+++ b/index.qmd
@@ -33,4 +33,4 @@ My teaching helps students from a wide range of backgrounds learn how to use dat
 I hold a PhD in Economics from the Australian National University where I focused on economic history and was supervised by [John Tang](https://sites.google.com/view/john-tang/home) (chair), [Martine Mariotti](https://researchers.anu.edu.au/researchers/mariotti-m), [Tim Hatton](https://researchers.anu.edu.au/researchers/hatton-tj), and [Zach Ward](https://sites.google.com/site/zachaward/).
 
 
-I am married to [Monica Alexander](https://www.monicaalexander.com), and we have two young children. [Slides](pdfs/doss.pdf)
+I am married to [Monica Alexander](https://www.monicaalexander.com), and we have two young children.
