--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -38,13 +38,15 @@ The TDW is a joint initiative between the Faculty of Information and the Departm
 	- **Tom Cardoso**, The Globe and Mail
 	- *Secret Canada: An investigation into Canada’s freedom of information systems*
 	- Tom Cardoso is a member of *The Globe and Mail's* investigations team based in Toronto. Since the fall of 2021, he has been investigating Canada's broken freedom of information systems.
-- Friday 20 October 2023, *Second Colloquium on Applications of LLMs*
+- Friday 20 October 2023
   - 11am - noon
     - **Yangjun Ruan**, University of Toronto
     - *Identifying the Risks of LM Agents with an LM-Emulated Sandbox*
+    - Yangjun Ruan is a Ph.D. Candidate in Computer Science at the University of Toronto, where he is advised by Chris Maddison and Jimmy Ba. Previously, he was a student researcher at Google Research and a research intern at Microsoft Research. In summer 2019, he was a visiting student at UCLA, where he worked with Cho-Jui Hsieh. He obtained a Bachelor degree in Information Engineering from Zhejiang University.
   - Noon - 1pm
   	- **Marzieh Fadaee**, Cohere for AI
   	- *Aya: An Open Science Initiative to Accelerate Multilingual AI Progress*	
+  	- Marzieh Fadaee is a Senior Research Scientist @ Cohere For AI. She holds a PhD from the Language Technology Lab at the University of Amsterdam, where she developed models to understand and utilize interesting phenomena in data, and was advised by Christof Monz and Arianna Bisazza. She received a B.Sc. from Sharif University majoring in Computer Engineering and M.Sc. from University of Tehran majoring in Artificial Intelligence.
 - Friday 27 October 2023, noon - 1pm
 	- **Wendy Foster**, Shopify	
 	- *Socio-technical processes for data integrity*	
