--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -41,11 +41,11 @@ The TDW is a joint initiative between the Faculty of Information and the Departm
 - Friday 20 October 2023
   - 11am - noon
     - **Yangjun Ruan**, University of Toronto
-    - *Identifying the Risks of LM Agents with an LM-Emulated Sandbox*
+    - [*Identifying the Risks of Language Model Agents with an Language Model Emulated Sandbox*](https://youtu.be/kdhv7RygGxc)
     - Yangjun Ruan is a Ph.D. Candidate in Computer Science at the University of Toronto, where he is advised by Chris Maddison and Jimmy Ba. Previously, he was a student researcher at Google Research and a research intern at Microsoft Research. In summer 2019, he was a visiting student at UCLA, where he worked with Cho-Jui Hsieh. He obtained a Bachelor degree in Information Engineering from Zhejiang University.
   - Noon - 1pm
   	- **Marzieh Fadaee**, Cohere for AI
-  	- *Aya: An Open Science Initiative to Accelerate Multilingual AI Progress*	
+  	- [*Aya: An Open Science Initiative to Accelerate Multilingual AI Progress*](https://youtu.be/kVOKtJ8ZTgI)	
   	- Marzieh Fadaee is a Senior Research Scientist @ Cohere For AI. She holds a PhD from the Language Technology Lab at the University of Amsterdam, where she developed models to understand and utilize interesting phenomena in data, and was advised by Christof Monz and Arianna Bisazza. She received a B.Sc. from Sharif University majoring in Computer Engineering and M.Sc. from University of Tehran majoring in Artificial Intelligence.
 - Friday 27 October 2023
   - 11am - noon
